--- a/package.json
+++ b/package.json
@@ -1,17 +1,48 @@
 {
   "name": "rcsphoto",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "start": "node app.js"
-  },
   "dependencies": {
-    "body-parser": "*",
-    "cradle": "*",
-    "express": "4.*",
-    "jade": "*",
-    "serve-favicon": "*",
-    "underscore": "*",
-    "vcap_services": "^0.7.1"
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.37",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "bootstrap": "^5.1.3",
+    "node-couchdb": "^1.3.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.1.0",
+    "react-scripts": "4.0.3",
+    "sass": "^1.45.0",
+    "typescript": "^4.5.3",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "start": "REACT_APP_DATABASE=\"rcsphoto\" REACT_APP_IMAGE_BASE_URL=\"http://d164y11hqgve5j.cloudfront.net\" react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
