--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "start": "REACT_APP_DATABASE=\"rcsphoto\" REACT_APP_IMAGE_BASE_URL=\"http://d164y11hqgve5j.cloudfront.net\" react-scripts start",
-    "build": "react-scripts build",
+    "build": "REACT_APP_DATABASE=\"rcsphoto\" REACT_APP_IMAGE_BASE_URL=\"http://d164y11hqgve5j.cloudfront.net\" react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
