--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "bootstrap": "^5.1.3",
+    "imagemagick": "^0.1.3",
     "node-couchdb": "^1.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
